--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,12 @@ a:hover {
 } */
 
 body {
-  margin: 0;
-  padding: 0;
+  margin: 50px;
+  padding: 0px;
   box-sizing: border-box;
+  background-color: #ffffff;
+  align-items: center;
+  justify-content: center;
 }
 
 form {
@@ -33,7 +36,47 @@ form {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid blue;
+  border: 2px solid #f44242;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #bdbdbd;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  font-family: "Pokemon Solid", sans-serif;
+  font-size: 24px;
+  color: #f44242;
+  text-align: center;
+}
+
+input[type="text"],
+input[type="password"],
+button {
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+button {
+  background-color: #f44242;
+  color: #fff;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #ff7675;
+}
+
+a {
+  color: #f44242;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 /* h1 {
   font-size: 3.2em;
